doc for teams + user improvements
